--- a/src/app/current-conditions/current-conditions.component.html
+++ b/src/app/current-conditions/current-conditions.component.html
@@ -1,4 +1,28 @@
-<div>
+<app-tabs *ngIf="conditionsAndZip.length" (closedTab)="removeLocation(conditionsAndZip[$event]?.zip)">
+  <ng-container *ngFor="let location of conditionsAndZip; trackBy: trackByZip">
+    <app-tab [tabTitle]="location.data.name + '(' + location.zip + ')'">
+      <div class="well flex" (click)="showForecast(location.zip)">
+        <div>
+          <h4>Current conditions: {{location.data.weather[0].main}}</h4>
+          <h4>Temperatures today:</h4>
+          <p>
+            Current {{location.data.main.temp | number:'.0-0'}}
+            - Max {{location.data.main.temp_max | number:'.0-0'}}
+            - Min {{location.data.main.temp_min | number:'.0-0'}}
+          </p>
+          <p>
+            <a [routerLink]="['/forecast', location.zip]" >Show 5-day forecast for {{location.data.name}}</a>
+          </p>
+        </div>
+        <div>
+          <img weatherIcon [id]="location.data.weather[0].id"  [alt]="location.data.weather[0].description">
+        </div>
+     </div>
+    </app-tab>
+  </ng-container>
+</app-tabs>
+
+<!-- <div>
   <div *ngFor="let location of conditionsAndZip; trackBy: trackByZip" class="well flex" (click)="showForecast(location.zip)">
     <div>
       <h3>{{location.data.name}} ({{location.zip}})</h3>
@@ -18,4 +42,4 @@
       <img weatherIcon [id]="location.data.weather[0].id"  [alt]="location.data.weather[0].description">
     </div>
  </div>
-</div>
+</div> -->
