--- a/src/app/current-conditions/current-conditions.component.html
+++ b/src/app/current-conditions/current-conditions.component.html
@@ -15,31 +15,9 @@
           </p>
         </div>
         <div>
-          <img weatherIcon [id]="location.data.weather[0].id"  [alt]="location.data.weather[0].description">
+          <img weatherIcon class="wheaterIcon" [id]="location.data.weather[0].id"  [alt]="location.data.weather[0].description">
         </div>
      </div>
     </app-tab>
   </ng-container>
 </app-tabs>
-
-<!-- <div>
-  <div *ngFor="let location of conditionsAndZip; trackBy: trackByZip" class="well flex" (click)="showForecast(location.zip)">
-    <div>
-      <h3>{{location.data.name}} ({{location.zip}})</h3>
-      <h4>Current conditions: {{location.data.weather[0].main}}</h4>
-      <h4>Temperatures today:</h4>
-      <p>
-        Current {{location.data.main.temp | number:'.0-0'}}
-        - Max {{location.data.main.temp_max | number:'.0-0'}}
-        - Min {{location.data.main.temp_min | number:'.0-0'}}
-      </p>
-      <p>
-        <a [routerLink]="['/forecast', location.zip]" >Show 5-day forecast for {{location.data.name}}</a>
-      </p>
-    </div>
-    <div>
-      <span class="close" (click)="removeLocation(location.zip)">&times;</span>
-      <img weatherIcon [id]="location.data.weather[0].id"  [alt]="location.data.weather[0].description">
-    </div>
- </div>
-</div> -->
