--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,5 +1,5 @@
 <ul class="nav nav-tabs">
-    <li *ngFor="let tab of tabs; let i = index" (click)="selectTab(tab)" [class.active]="tab.active">
+    <li *ngFor="let tab of tabs; let i = index" (click)="selectTab(tab, i)" [class.active]="tab.active">
       <a href="#">{{tab.title}} <span class="tab-close" (click)="closeTab(i)">&times;</span></a>
     </li>
 </ul>
