--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid">
-
   <app-zipcode-entry (zipcode)="addLocation($event)"> </app-zipcode-entry>
-  <app-current-conditions (zipcode)="removeLocation($event)" (selectedCurrentCondition)="selectCurrentCondition($event)" [conditionsAndZip]="currentConditionsByZip()"></app-current-conditions>
-
+  <app-current-conditions 
+    (closedZipcode)="removeLocation($event)" 
+    (selectedCurrentCondition)="selectCurrentCondition($event)" 
+    [conditionsAndZip]="currentConditionsByZip()">
+  </app-current-conditions>
 </div>
